--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -20,3 +20,36 @@ html/custom_html_shell=""
 html/head_include=""
 custom_template/release=""
 custom_template/debug=""
+
+[preset.1]
+
+name="Windows Desktop"
+platform="Windows Desktop"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="D:/Git repositories/Carrom/Export/Carrom.exe"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+binary_format/64_bits=true
+custom_template/release=""
+custom_template/debug=""
+application/icon="res://icon.ico"
+application/file_version="0.1.0"
+application/product_version="0.1.0"
+application/company_name="Ajver Games"
+application/product_name="Carrom"
+application/file_description="Carrom Game"
+application/copyright="Dominik Zawlocki"
+application/trademarks=""
